--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
         "symfony/dotenv": "*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "*",
-        "symfony/twig-pack": "^1.0",
-        "symfony/yaml": "*"
+        "symfony/twig-bundle": "*",
+        "symfony/yaml": "*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "pact-foundation/pact-php": "^7.0",
