adaptations for local development with ddev

--- a/.env
+++ b/.env
@@ -15,11 +15,13 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=myAppSecret
-APP_NAME=myAppName
-APP_URL_BACKEND=http://your-backend-url.com
-APP_URL_CLIENT=http://your-client-url.com
-DATABASE_URL=mysql://user:@database.internal:3306/main
+# use Shopware's bin/console system:generate-app-secret and copy/paste
+APP_SECRET=appSecret
+# this is the Shopware name of your app
+APP_NAME=appName
+APP_URL_BACKEND=https://example.com
+# for ddev, use the https://ddev-<project>-web format
+APP_URL_CLIENT=https://example.com/registration
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
