--- a/migrations.yml
+++ b/migrations.yml
@@ -6,7 +6,7 @@ table_storage:
   execution_time_column_name: execution_time
 
 migrations_paths:
-  'App\DoctrineMigrations': migrations
+  'DoctrineMigrations': '/var/www/html/migrations'
 
 all_or_nothing: true
 check_database_platform: true
