add comment in .env

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-# use Shopware's bin/console system:generate-app-secret and copy/paste
+# use Shopware's bin/console system:generate-app-secret and copy/paste, this secret will be provide by app store when published
 APP_SECRET=appSecret
 # this is the Shopware name of your app
 APP_NAME=appName
